# Satisfaction-Survey-Analysis

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  isort.cfg  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
notebook/: satisfaction.ipynb
