[tool.poetry]
name = "Satisfaction-Survey-Analysis"
description = "the Practice of Survey data Analysis"
author = ["cjssoote@gmail.com", "hhappee3@gmail.com"]

[tool.poetry.dependencies]
black = ">=19.3b0,<=22.12"
isort = ">=5.7"
mypy = ">=0.910"
pre-commit = ">=2.13"
pylint = ">=2.9"
python = ">=3.8"

[tool.black]
line-length = 120
target-version = ['py38']
